==> anonymeYan/Template_32/HARDWARE/IIC/myiic.c <==
#include "myiic.h"

static void IIC1_Init(void); 
static	void IIC1_Start(void);
static	void IIC1_Stop(void); 
static	void IIC1_Ack(void); 
static	void IIC1_NAck(void);
static	void IIC1_Send_Byte(uint8_t txd);
static	uint8_t IIC1_Read_Byte(uint8_t ack); 
static	uint8_t IIC1_Wait_Ack(void);

MYIIC_t  MYIIC_IIC1 =
{
	IIC1_Init,
	IIC1_Start,
  IIC1_Stop,
	IIC1_Ack,
	IIC1_NAck,
	IIC1_Send_Byte,
	IIC1_Read_Byte,
	IIC1_Wait_Ack
};


static  void IIC2_Init(void); 
static	void IIC2_Start(void);
static	void IIC2_Stop(void); 
static	void IIC2_Ack(void); 
static	void IIC2_NAck(void);
static	void IIC2_Send_Byte(uint8_t txd);
static	uint8_t IIC2_Read_Byte(uint8_t ack); 
static	uint8_t IIC2_Wait_Ack(void);

MYIIC_t  MYIIC_IIC2 =
{
	IIC2_Init,
	IIC2_Start,
  IIC2_Stop,
	IIC2_Ack,
	IIC2_NAck,
	IIC2_Send_Byte,
	IIC2_Read_Byte,
	IIC2_Wait_Ack
};

//初始化IIC
static void IIC1_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    RCC_APB2PeriphClockCmd(	RCC_APB2Periph_GPIOB, ENABLE );	//使能GPIOB时钟

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6|GPIO_Pin_7;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP ;   //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOB, &GPIO_InitStructure);
    GPIO_SetBits(GPIOB,GPIO_Pin_6|GPIO_Pin_7); 	//PB6,PB7 输出高
}
//产生IIC起始信号
static void IIC1_Start(void)
{
    SDA_OUT();     //sda线输出
    IIC_SDA=1;
    IIC_SCL=1;
    delay_us(4);
    IIC_SDA=0;//START:when CLK is high,DATA change form high to low
    delay_us(4);
    IIC_SCL=0;//钳住I2C总线，准备发送或接收数据
}
//产生IIC停止信号
static void IIC1_Stop(void)
{
    SDA_OUT();//sda线输出
    IIC_SCL=0;
    IIC_SDA=0;//STOP:when CLK is high DATA change form low to high
    delay_us(4);
    IIC_SCL=1;
    IIC_SDA=1;//发送I2C总线结束信号
    delay_us(4);
}
//等待应答信号到来
//返回值：1，接收应答失败
//        0，接收应答成功
static u8 IIC1_Wait_Ack(void)
{
    u8 ucErrTime=0;
    SDA_IN();      //SDA设置为输入
    IIC_SDA=1;
    delay_us(1);
    IIC_SCL=1;
    delay_us(1);
    while(READ_SDA)
    {
        ucErrTime++;
        if(ucErrTime>250)
        {
            IIC1_Stop();
            return 1;
        }
    }
    IIC_SCL=0;//时钟输出0
    return 0;
}
//产生ACK应答
static void IIC1_Ack(void)
{
    IIC_SCL=0;
    SDA_OUT();
    IIC_SDA=0;
    delay_us(2);
    IIC_SCL=1;
    delay_us(2);
    IIC_SCL=0;
}
//不产生ACK应答
static void IIC1_NAck(void)
{
    IIC_SCL=0;
    SDA_OUT();
    IIC_SDA=1;
    delay_us(2);
    IIC_SCL=1;
    delay_us(2);
    IIC_SCL=0;
}
//IIC发送一个字节
//返回从机有无应答
//1，有应答
//0，无应答
static void IIC1_Send_Byte(u8 txd)
{
    u8 t;
    SDA_OUT();
    IIC_SCL=0;//拉低时钟开始数据传输
    for(t=0; t<8; t++)
    {
        //IIC_SDA=(txd&0x80)>>7;
        if((txd&0x80)>>7)
            IIC_SDA=1;
        else
            IIC_SDA=0;
        txd<<=1;
        delay_us(2);   //对TEA5767这三个延时都是必须的
        IIC_SCL=1;
        delay_us(2);
        IIC_SCL=0;
        delay_us(2);
    }
}
//读1个字节，ack=1时，发送ACK，ack=0，发送nACK
static u8 IIC1_Read_Byte(unsigned char ack)
{
    unsigned char i,receive=0;
    SDA_IN();//SDA设置为输入
    for(i=0; i<8; i++ )
    {
        IIC_SCL=0;
        delay_us(2);
        IIC_SCL=1;
        receive<<=1;
        if(READ_SDA)receive++;
        delay_us(1);
    }
    if (!ack)
        IIC1_NAck();//发送nACK
    else
        IIC1_Ack(); //发送ACK
    return receive;
}




void IIC2_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    RCC_APB2PeriphClockCmd(	RCC_APB2Periph_GPIOB, ENABLE );	//使能GPIOB时钟

    GPIO_InitStructure.GPIO_Pin =GPIO_Pin_10|GPIO_Pin_11;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP ;   //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOB, &GPIO_InitStructure);
    GPIO_SetBits(GPIOB,GPIO_Pin_10|GPIO_Pin_11); 	//PB10,PB11 输出高
}



void IIC2_Start(void)
{
    SDA_OUT1();     //sda线输出
    IIC_SDA1=1;
    IIC_SCL1=1;
    delay_us(4);
    IIC_SDA1=0;//START:when CLK is high,DATA change form high to low
    delay_us(4);
    IIC_SCL1=0;//钳住I2C总线，准备发送或接收数据
}


//产生IIC停止信号
void IIC2_Stop(void)
{
    SDA_OUT1();//sda线输出
    IIC_SCL1=0;
    IIC_SDA1=0;//STOP:when CLK is high DATA change form low to high
    delay_us(4);
    IIC_SCL1=1;
    IIC_SDA1=1;//发送I2C总线结束信号
    delay_us(4);
}
//等待应答信号到来
//返回值：1，接收应答失败
//        0，接收应答成功
u8 IIC2_Wait_Ack(void)
{
    u8 ucErrTime=0;
    SDA_IN1();      //SDA设置为输入
    IIC_SDA1=1;
    delay_us(1);
    IIC_SCL1=1;
    delay_us(1);
    while(READ_SDA1)
    {
        ucErrTime++;
        if(ucErrTime>250)
        {
            IIC2_Stop();
            return 1;
        }
    }
    IIC_SCL1=0;//时钟输出0
    return 0;
}
//产生ACK应答
void IIC2_Ack(void)
{
    IIC_SCL1=0;
    SDA_OUT1();
    IIC_SDA1=0;
    delay_us(2);
    IIC_SCL1=1;
    delay_us(2);
    IIC_SCL1=0;
}
//不产生ACK应答
void IIC2_NAck(void)
{
    IIC_SCL1=0;
    SDA_OUT1();
    IIC_SDA1=1;
    delay_us(2);
    IIC_SCL1=1;
    delay_us(2);
    IIC_SCL1=0;
}
//IIC发送一个字节
//返回从机有无应答
//1，有应答
//0，无应答
void IIC2_Send_Byte(u8 txd)
{
    u8 t;
    SDA_OUT1();
    IIC_SCL1=0;//拉低时钟开始数据传输
    for(t=0; t<8; t++)
    {
        //IIC_SDA=(txd&0x80)>>7;
        if((txd&0x80)>>7)
            IIC_SDA1=1;
        else
            IIC_SDA1=0;
        txd<<=1;
        delay_us(2);   //对TEA5767这三个延时都是必须的
        IIC_SCL1=1;
        delay_us(2);
        IIC_SCL1=0;
        delay_us(2);
    }
}
//读1个字节，ack=1时，发送ACK，ack=0，发送nACK
u8 IIC2_Read_Byte(unsigned char ack)
{
    unsigned char i,receive=0;
    SDA_IN1();//SDA设置为输入
    for(i=0; i<8; i++ )
    {
        IIC_SCL1=0;
        delay_us(2);
        IIC_SCL1=1;
        receive<<=1;
        if(READ_SDA1)receive++;
        delay_us(1);
    }
    if (!ack)
        IIC2_NAck();//发送nACK
    else
        IIC2_Ack(); //发送ACK
    return receive;
}
